--- a/index.html
+++ b/index.html
@@ -167,27 +167,59 @@
             <div class="generation-panel">
                 <div id="learnPanel" class="panel">
                     <div class="panel-title">Aprender</div>
-                    <button id="generateKnowledge">Gerar Conhecimento (Custo: 10)</button>
-                    <div class="progress-bar"><div class="progress" id="knowledgeProgress"></div></div>
-                    <div class="timer" id="knowledgeTimer">Tempo restante: 0s</div>
+                    <button id="generateKnowledge1">Gerar Conhecimento 1 (Custo: 10)</button>
+                    <div class="progress-bar"><div class="progress" id="knowledgeProgress1"></div></div>
+                    <div class="timer" id="knowledgeTimer1"></div>
+
+                    <button id="generateKnowledge2">Gerar Conhecimento 2 (Custo: 20)</button>
+                    <div class="progress-bar"><div class="progress" id="knowledgeProgress2"></div></div>
+                    <div class="timer" id="knowledgeTimer2"></div>
+
+                    <button id="generateKnowledge3">Gerar Conhecimento 3 (Custo: 40)</button>
+                    <div class="progress-bar"><div class="progress" id="knowledgeProgress3"></div></div>
+                    <div class="timer" id="knowledgeTimer3"></div>
                 </div>
                 <div id="workPanel" class="panel hidden">
                     <div class="panel-title">Trabalhar</div>
-                    <button id="generateGrana">Gerar Grana (Custo: 10)</button>
-                    <div class="progress-bar"><div class="progress" id="granaProgress"></div></div>
-                    <div class="timer" id="granaTimer">Tempo restante: 0s</div>
+                    <button id="generateGrana1">Gerar Grana 1 (Custo: 10)</button>
+                    <div class="progress-bar"><div class="progress" id="granaProgress1"></div></div>
+                    <div class="timer" id="granaTimer1"></div>
+
+                    <button id="generateGrana2">Gerar Grana 2 (Custo: 20)</button>
+                    <div class="progress-bar"><div class="progress" id="granaProgress2"></div></div>
+                    <div class="timer" id="granaTimer2"></div>
+
+                    <button id="generateGrana3">Gerar Grana 3 (Custo: 40)</button>
+                    <div class="progress-bar"><div class="progress" id="granaProgress3"></div></div>
+                    <div class="timer" id="granaTimer3"></div>
                 </div>
                 <div id="codePanelGeneration" class="panel hidden">
                     <div class="panel-title">Programar</div>
-                    <button id="generateCode">Gerar Código (Custo: 10)</button>
-                    <div class="progress-bar"><div class="progress" id="codeProgress"></div></div>
-                    <div class="timer" id="codeTimer">Tempo restante: 0s</div>
+                    <button id="generateCodigo1">Gerar Código 1 (Custo: 10)</button>
+                    <div class="progress-bar"><div class="progress" id="codigoProgress1"></div></div>
+                    <div class="timer" id="codigoTimer1"></div>
+
+                    <button id="generateCodigo2">Gerar Código 2 (Custo: 20)</button>
+                    <div class="progress-bar"><div class="progress" id="codigoProgress2"></div></div>
+                    <div class="timer" id="codigoTimer2"></div>
+
+                    <button id="generateCodigo3">Gerar Código 3 (Custo: 40)</button>
+                    <div class="progress-bar"><div class="progress" id="codigoProgress3"></div></div>
+                    <div class="timer" id="codigoTimer3"></div>
                 </div>
                 <div id="trainPanelGeneration" class="panel hidden">
                     <div class="panel-title">Treinar</div>
-                    <button id="generateData">Gerar Dados (Custo: 10)</button>
-                    <div class="progress-bar"><div class="progress" id="dataProgress"></div></div>
-                    <div class="timer" id="dataTimer">Tempo restante: 0s</div>
+                    <button id="generateDados1">Gerar Dados 1 (Custo: 10)</button>
+                    <div class="progress-bar"><div class="progress" id="dadosProgress1"></div></div>
+                    <div class="timer" id="dadosTimer1"></div>
+
+                    <button id="generateDados2">Gerar Dados 2 (Custo: 20)</button>
+                    <div class="progress-bar"><div class="progress" id="dadosProgress2"></div></div>
+                    <div class="timer" id="dadosTimer2"></div>
+
+                    <button id="generateDados3">Gerar Dados 3 (Custo: 40)</button>
+                    <div class="progress-bar"><div class="progress" id="dadosProgress3"></div></div>
+                    <div class="timer" id="dadosTimer3"></div>
                 </div>
             </div>
         </div>
@@ -198,11 +230,20 @@
         let grana = 0;
         let codigo = 0;
         let dados = 0;
-        const knowledgeCost = 10;
-        const knowledgeTime = 10; // segundos
-        const knowledgeAmount = 10;
-        let knowledgeTimer = null;
-        let knowledgeCountdown = 0;
+        let currentResource = 'conhecimento';
+
+        const resourceTypes = ['conhecimento', 'grana', 'codigo', 'dados'];
+        const generationLevels = 3;
+
+        const baseGenerationCost = 10;
+        const baseGenerationTime = 10; // segundos
+        const baseGenerationAmount = 10;
+
+        let generationTimers = {};
+
+        resourceTypes.forEach(resource => {
+            generationTimers[resource] = Array(generationLevels).fill(null);
+        });
 
         function updateResources() {
             document.getElementById('knowledgeCounter').textContent = Math.floor(conhecimento);
@@ -225,59 +266,100 @@
         }
 
         document.getElementById('clickable').addEventListener('click', () => {
-            conhecimento++;
+            switch(currentResource) {
+                case 'conhecimento':
+                    conhecimento++;
+                    break;
+                case 'grana':
+                    grana++;
+                    if (grana === 1) {
+                        showResourcePanel('granaPanel');
+                        showButton('workBtn');
+                    }
+                    break;
+                case 'codigo':
+                    codigo++;
+                    if (codigo === 1) {
+                        showResourcePanel('codePanel');
+                        showButton('codeBtn');
+                    }
+                    break;
+                case 'dados':
+                    dados++;
+                    if (dados === 1) {
+                        showResourcePanel('dataPanel');
+                        showButton('trainBtn');
+                    }
+                    break;
+            }
             updateResources();
         });
 
         document.getElementById('learnBtn').addEventListener('click', () => {
+            currentResource = 'conhecimento';
             showPanel('learnPanel');
         });
 
         document.getElementById('workBtn').addEventListener('click', () => {
+            currentResource = 'grana';
             showPanel('workPanel');
         });
 
         document.getElementById('codeBtn').addEventListener('click', () => {
+            currentResource = 'codigo';
             showPanel('codePanelGeneration');
         });
 
         document.getElementById('trainBtn').addEventListener('click', () => {
+            currentResource = 'dados';
             showPanel('trainPanelGeneration');
         });
 
-        function startKnowledgeGeneration() {
-            if (conhecimento >= knowledgeCost && !knowledgeTimer) {
-                conhecimento -= knowledgeCost;
+        function startGeneration(resource, level) {
+            const generationCost = baseGenerationCost * Math.pow(2, level);
+            const generationTime = baseGenerationTime * Math.pow(2, level);
+            const generationAmount = baseGenerationAmount * Math.pow(2, level);
+
+            if (window[resource] >= generationCost && !generationTimers[resource][level]) {
+                window[resource] -= generationCost;
                 updateResources();
 
-                knowledgeCountdown = knowledgeTime;
-                const progressBar = document.getElementById('knowledgeProgress');
-                const timerElement = document.getElementById('knowledgeTimer');
+                let countdown = generationTime;
+                const progressBar = document.getElementById(`${resource}Progress${level + 1}`);
+                const timerElement = document.getElementById(`${resource}Timer${level + 1}`);
+                const generateButton = document.getElementById(`generate${resource.charAt(0).toUpperCase() + resource.slice(1)}${level + 1}`);
                 
+                generateButton.disabled = true;
+
                 function updateProgress() {
-                    const progress = 1 - (knowledgeCountdown / knowledgeTime);
+                    const progress = 1 - (countdown / generationTime);
                     progressBar.style.width = `${progress * 100}%`;
-                    timerElement.textContent = `Tempo restante: ${knowledgeCountdown}s`;
+                    timerElement.textContent = `Tempo restante: ${countdown}s`;
                     
-                    if (knowledgeCountdown <= 0) {
-                        conhecimento += knowledgeAmount;
+                    if (countdown <= 0) {
+                        window[resource] += generationAmount;
                         updateResources();
-                        clearInterval(knowledgeTimer);
-                        knowledgeTimer = null;
+                        clearInterval(generationTimers[resource][level]);
+                        generationTimers[resource][level] = null;
                         timerElement.textContent = '';
                         progressBar.style.width = '0%';
-                        startKnowledgeGeneration(); // Reinicia a geração automaticamente
+                        generateButton.disabled = false;
                     } else {
-                        knowledgeCountdown--;
+                        countdown--;
                     }
                 }
 
                 updateProgress();
-                knowledgeTimer = setInterval(updateProgress, 1000);
+                generationTimers[resource][level] = setInterval(updateProgress, 1000);
             }
         }
 
-        document.getElementById('generateKnowledge').addEventListener('click', startKnowledgeGeneration);
+        resourceTypes.forEach(resource => {
+            for (let i = 0; i < generationLevels; i++) {
+                const buttonId = `generate${resource.charAt(0).toUpperCase() + resource.slice(1)}${i + 1}`;
+                document.getElementById(buttonId).addEventListener('click', () => startGeneration(resource, i));
+            }
+        });
 
         updateResources();
         showPanel('learnPanel');
