--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div id="game">
         <div class="left-column">
             <div class="resource-panel">
-                <div class="panel-title">Recursos</div>
+                <div class="panel-title">Recursooos</div>
                 <div id="conhecimentoPanel" class="panel">
                     <div class="panel-title">Conhecimento</div>
                     <div class="resource-counter">Quantidade: <span id="conhecimentoCounter">0</span></div>
