--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="resource-panel">
                 <div class="panel-title">Recursos</div>
                 <div id="conhecimentoPanel" class="panel">
-                    <div class="panel-title">Cocccnhecimento</div>
+                    <div class="panel-title">Conhecimento</div>
                     <div class="resource-counter">Quantidade: <span id="conhecimentoCounter">0</span></div>
                 </div>
                 <div id="granaPanel" class="panel hidden">
