--- a/index.html
+++ b/index.html
@@ -5,15 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo Idle Clicker</title>
     <style>
-        /* ... (estilos anteriores mantidos) ... */
+        body, html {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        #game {
+            display: flex;
+            height: 100vh;
+        }
+        .left-column {
+            display: flex;
+            flex-direction: column;
+            width: 30%;
+        }
+        .center-column {
+            display: flex;
+            flex-direction: column;
+            width: 30%;
+        }
+        .right-column {
+            width: 40%;
+        }
+        .resource-panel {
+            flex: 3;
+            background-color: #f0f0f0;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            overflow-y: auto;
+        }
+        .minigames-panel {
+            flex: 1;
+            background-color: #d0d0d0;
+            padding: 10px;
+            overflow-y: auto;
+        }
+        .click-panel {
+            flex: 2;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+        }
+        .upgrades-panel {
+            flex: 2;
+            background-color: #e0e0e0;
+            padding: 10px;
+            overflow-y: auto;
+        }
         .generation-panel {
             height: 100%;
             background-color: #f0f0f0;
             padding: 10px;
             overflow-y: auto;
         }
-        .resource-generation {
+        .panel {
+            border: 1px solid #ccc;
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: white;
+        }
+        .panel-title {
+            font-weight: bold;
+            margin-bottom: 5px;
+            background-color: #e0e0e0;
+            padding: 5px;
+        }
+        .resource-counter {
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+        #clickable {
+            width: 100px;
+            height: 100px;
+            background-color: #4CAF50;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: transform 0.1s;
             margin-bottom: 20px;
+        }
+        #clickable:active {
+            transform: scale(0.95);
+        }
+        button {
+            margin: 5px;
+            padding: 10px;
+            cursor: pointer;
+            width: 180px;
         }
         .progress-bar {
             width: 100%;
@@ -34,11 +116,56 @@
             color: #666;
             margin-top: 5px;
         }
+        .hidden {
+            display: none;
+        }
+        .resource-generation {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <div id="game">
-        <!-- ... (colunas esquerda e central mantidas) ... -->
+        <div class="left-column">
+            <div class="resource-panel">
+                <div class="panel-title">Recursos</div>
+                <div id="conhecimentoPanel" class="panel">
+                    <div class="panel-title">Conhecimento</div>
+                    <div class="resource-counter">Quantidade: <span id="conhecimentoCounter">0</span></div>
+                </div>
+                <div id="granaPanel" class="panel hidden">
+                    <div class="panel-title">Grana</div>
+                    <div class="resource-counter">Quantidade: <span id="granaCounter">0</span></div>
+                </div>
+                <div id="codigoPanel" class="panel hidden">
+                    <div class="panel-title">Código</div>
+                    <div class="resource-counter">Quantidade: <span id="codigoCounter">0</span></div>
+                </div>
+                <div id="dadosPanel" class="panel hidden">
+                    <div class="panel-title">Dados</div>
+                    <div class="resource-counter">Quantidade: <span id="dadosCounter">0</span></div>
+                </div>
+            </div>
+            <div class="minigames-panel">
+                <div class="panel-title">Minigames</div>
+                <!-- Conteúdo dos minigames será adicionado aqui -->
+            </div>
+        </div>
+        <div class="center-column">
+            <div class="click-panel">
+                <div id="clickable"></div>
+                <div>
+                    <button id="learnBtn">Aprender</button>
+                    <button id="workBtn" class="hidden">Trabalhar</button>
+                    <button id="codeBtn" class="hidden">Programar</button>
+                    <button id="trainBtn" class="hidden">Treinar</button>
+                </div>
+            </div>
+            <div class="upgrades-panel">
+                <div class="panel-title">Upgrades</div>
+                <!-- Conteúdo dos upgrades será adicionado aqui -->
+            </div>
+        </div>
         <div class="right-column">
             <div class="generation-panel">
                 <div class="resource-generation">
@@ -93,6 +220,19 @@
             document.getElementById('dadosCounter').textContent = Math.floor(dados);
         }
 
+        function showPanel(panelId) {
+            document.querySelectorAll('.generation-panel .panel').forEach(panel => panel.classList.add('hidden'));
+            document.getElementById(panelId).classList.remove('hidden');
+        }
+
+        function showResourcePanel(resourceId) {
+            document.getElementById(resourceId).classList.remove('hidden');
+        }
+
+        function showButton(buttonId) {
+            document.getElementById(buttonId).classList.remove('hidden');
+        }
+
         function startGeneration(resource) {
             if (conhecimento >= generationCost && !generationTimers[resource]) {
                 conhecimento -= generationCost;
@@ -130,11 +270,6 @@
             }
         }
 
-        resources.forEach(resource => {
-            const buttonId = `generate${resource.charAt(0).toUpperCase() + resource.slice(1)}1`;
-            document.getElementById(buttonId).addEventListener('click', () => startGeneration(resource));
-        });
-
         document.getElementById('clickable').addEventListener('click', () => {
             switch(currentResource) {
                 case 'conhecimento':
@@ -142,18 +277,49 @@
                     break;
                 case 'grana':
                     grana++;
+                    if (grana === 1) {
+                        showResourcePanel('granaPanel');
+                        showButton('workBtn');
+                    }
                     break;
                 case 'codigo':
                     codigo++;
+                    if (codigo === 1) {
+                        showResourcePanel('codigoPanel');
+                        showButton('codeBtn');
+                    }
                     break;
                 case 'dados':
                     dados++;
+                    if (dados === 1) {
+                        showResourcePanel('dadosPanel');
+                        showButton('trainBtn');
+                    }
                     break;
             }
             updateResources();
         });
 
-        // ... (outros event listeners mantidos) ...
+        document.getElementById('learnBtn').addEventListener('click', () => {
+            currentResource = 'conhecimento';
+        });
+
+        document.getElementById('workBtn').addEventListener('click', () => {
+            currentResource = 'grana';
+        });
+
+        document.getElementById('codeBtn').addEventListener('click', () => {
+            currentResource = 'codigo';
+        });
+
+        document.getElementById('trainBtn').addEventListener('click', () => {
+            currentResource = 'dados';
+        });
+
+        resources.forEach(resource => {
+            const buttonId = `generate${resource.charAt(0).toUpperCase() + resource.slice(1)}1`;
+            document.getElementById(buttonId).addEventListener('click', () => startGeneration(resource));
+        });
 
         updateResources();
     </script>
